--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -2,9 +2,14 @@
 
 :root {
   --primary: #fe2c55;
+  --default--header-height: 60px;
+  --default--sidebar-wight: 356px;
+  --default--wight: 1150px;
 }
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
