--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -2,6 +2,8 @@
 
 :root {
   --primary: #fe2c55;
+  --black: #000;
+  --text-color: #ccc;
   --default--header-height: 60px;
   --default--sidebar-wight: 356px;
   --default--wight: 1150px;
@@ -20,4 +22,14 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+}
+button,
+input,
+[tabindex] {
+  outline: none;
+  border: none;
+}
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
 }
