--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .wrapper {
+  --search-border-radius: 92px;
+  --search-height: 46px;
+  --search-top-spacer: 9px;
+  --search-right-icon: 52px;
   width: 100%;
   height: var(--default--header-height);
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -8,4 +12,71 @@
 .inner {
   height: 100%;
   width: var(--default--wight);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search {
+  width: 361px;
+  height: var(--search-height);
+  padding-left: 0 16px;
+  border-radius: var(--search-border-radius);
+  display: flex;
+  background-color: rgb(241 241 242);
+  border: 1.5px solid transparent;
+  position: relative;
+  input {
+    font-weight: 400;
+    flex: 1px;
+    font-size: 16px;
+    color: var(--black);
+    caret-color: var(--primary);
+    line-height: 22px;
+    padding: 0px 12px;
+    background: transparent;
+    width: 292px;
+  }
+  &:focus-within {
+    border-color: rgba(22, 24, 35, 0.2);
+  }
+  input:not(:placeholder-shown) ~ .search-icon {
+    color: rgba(22, 24, 35, 0.75);
+  }
+}
+.search-icon {
+  width: var(--search-right-icon);
+  cursor: pointer;
+  height: 100%;
+  font-size: 2rem;
+  border-bottom-right-radius: var(--search-border-radius);
+  border-top-right-radius: var(--search-border-radius);
+  color: rgba(22, 24, 35, 0.34);
+  position: relative;
+  &:hover {
+    background: rgba(22, 24, 35, 0.12);
+  }
+  &::before {
+    content: '';
+    position: absolute;
+    height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+    top: var(--search-top-spacer);
+    right: var(--search-right-icon);
+    width: 1px;
+    background: rgba(22, 24, 35, 0.34);
+  }
+  &:active {
+    background-color: rgba(22, 24, 35, 0.03);
+  }
+}
+
+.clear,
+.loading {
+  position: absolute;
+  top: 50%;
+  padding: 12px 16px;
+  transform: translateY(-50%);
+  right: calc(var(--search-right-icon));
+}
+
+.action {
 }
