--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -16,8 +16,11 @@
   justify-content: space-between;
   align-items: center;
 }
-.search {
+.search,
+.search-result {
   width: 361px;
+}
+.search {
   height: var(--search-height);
   padding-left: 0 16px;
   border-radius: var(--search-border-radius);
@@ -68,7 +71,17 @@
     background-color: rgba(22, 24, 35, 0.03);
   }
 }
-
+.search-label {
+  height: 30px;
+  padding: 5px 12px;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 600;
+  color: rgba(22, 24, 35, 0.5);
+}
+// .search-result {
+//    padding-top: 8px;
+// }
 .clear,
 .loading {
   position: absolute;
