--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -3,6 +3,7 @@
 :root {
   --primary: #fe2c55;
   --black: #000;
+  --white: #fff;
   --text-color: #ccc;
   --default--header-height: 60px;
   --default--sidebar-wight: 356px;
