--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -11,6 +11,7 @@
 }
 .inner {
   height: 100%;
+  padding: 0 24px 0 20px;
   width: var(--default--wight);
   display: flex;
   justify-content: space-between;
