--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -2,7 +2,7 @@
   font-size: 1.6rem;
   font-weight: 700;
   min-width: 100px;
-  padding: 8px 6px;
+  padding: 7px 6px;
   border-radius: 4px;
   cursor: pointer;
   background-color: var(--white);
@@ -13,7 +13,7 @@
 
   border: 1px solid transparent;
   + .wrapper {
-    margin-left: 8px;
+    margin-left: 16px;
   }
 }
 
@@ -53,7 +53,16 @@
   pointer-events: none;
   opacity: 0.5;
 }
-
+.boderline {
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  border-radius: 2px;
+  min-width: 114px;
+  color: rgba(22, 24, 35, 1);
+  &:hover {
+    background-color: rgba(22, 24, 35, 0.03);
+    border: 1px solid rgba(22, 24, 35, 0.12);
+  }
+}
 //Button Size
 .small {
   min-width: 88px;
@@ -68,4 +77,9 @@
 .icon + .title,
 .title + .icon {
   margin-left: 8px;
+}
+.icon {
+  display: inline-flex;
+  justify-content: center;
+  width: 24px;
 }
